fix image on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -13,15 +13,16 @@ body {
 .titlebar {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Align text to the start for better control */
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;  /* Align content to the top of the container */
     text-align: left;
-    width: 93%; /* Adjust this to match the width of your main content if different */
+    width: 93%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px; /* Align these paddings to match other content */
+    padding-left: 15px;
     padding-right: 15px;
 }
+
 
 .text-container {
     width: 100%;
